fix css color value and vertical-align value

--- a/cgit.css
+++ b/cgit.css
@@ -654,7 +654,7 @@ table.hgraph th {
 }
 
 table.hgraph td {
-	vertical-align: center;
+	vertical-align: middle;
 	padding: 2px 2px;
 }
 
@@ -731,7 +731,7 @@ table.ssdiff td.lineno {
 }
 
 table.ssdiff td.hunk {
-	color: #black;
+	color: black;
 	background: #ccf;
 	border-top: solid 1px #aaa;
 	border-bottom: solid 1px #aaa;
